--- a/view/frontend/templates/widget/frontwidget.phtml
+++ b/view/frontend/templates/widget/frontwidget.phtml
@@ -1,6 +1,6 @@
 <!--FOUR BUTTON BLOCK-->
 <div class="row nomargin">
-<div class="min-height-content content-green-dark col-md-12 col-sm-12 col-xs-12 paddingright paddingbottom box-content valign-parent" style="background-color: black; color: white; padding: 10px;">
+<div class="min-height-content content-green-dark col-md-12 col-sm-12 col-xs-12 paddingright paddingbottom box-content valign-parent" style="background-color: <?php echo $block->getData('bannercolor'); ?><?php echo $block->getData('bannercolor'); ?><?php endif; ?>; padding: 10px;">
 <div class="hcaption" style="color: white;" data-target="#box-1">
 <div class="pad-bottom-lg green-title" style="padding: 8%;">
 <h2 class="banner_title"><?php echo $block->getData('headline1'); ?><?php echo $block->getData('headline1'); ?><?php endif; ?>
